--- a/mastermind.html
+++ b/mastermind.html
@@ -3,5 +3,5 @@
 <script type="text/javascript" src="mastermind.js"/>
 <style type="text/css" src="mastermind.css"/>
 </head>
-<body>Game goes here</body>
+<body><div>Game goes here</div></body>
 </html>
