--- a/mastermind.html
+++ b/mastermind.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Mastermind Game</title></head>
-<script type="text/javascript" src="mastermind.js"/>
-<style type="text/css" src="mastermind.css"/>
+<script type="text/javascript" src="mastermind.js">
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body><div>Game goes here</div></body>
 </html>
