--- a/mastermind.html
+++ b/mastermind.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>Mastermind Game</title></head>
-<script type="text/javascript" src="mastermind.js">
+<script type="text/javascript" src="mastermind.js"></script>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body><div>Game goes here</div></body>
