--- a/mastermind.html
+++ b/mastermind.html
@@ -3,5 +3,10 @@
 <script type="text/javascript" src="mastermind.js"></script>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
-<body><div>Game goes here</div></body>
+<body>
+  <div>
+  <a href="http://example.com" class="round-button">OK</a>
+
+</div>
+</body>
 </html>
