--- a/mastermind.html
+++ b/mastermind.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Mastermind Game</title></head>
 <script type="text/javascript" src="mastermind.js"></script>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel="stylesheet" type="text/css" href="mastermind.css">
 </head>
 <body>
   <div>
