--- a/mastermind.html
+++ b/mastermind.html
@@ -5,8 +5,7 @@
 </head>
 <body>
   <div>
-  <a href="http://example.com" class="round-button">OK</a>
-
+  <a href="http://example.com" class="large-peg">OK</a>
 </div>
 </body>
 </html>
