--- a/mastermind.html
+++ b/mastermind.html
@@ -5,7 +5,11 @@
 </head>
 <body>
   <div>
-  <a href="http://example.com" class="large-peg">OK</a>
+  <a href="javascript:handlePegClick();" class="large-peg"></a>
+  <a href="javascript:handlePegClick();" class="large-peg"></a>
+  <a href="javascript:handlePegClick();" class="large-peg"></a>
+  <a href="javascript:handlePegClick();" class="large-peg"></a>
+  </div>
 </div>
 </body>
 </html>
