--- a/mastermind.html
+++ b/mastermind.html
@@ -5,10 +5,10 @@
 </head>
 <body>
   <div>
-  <a href="javascript:handlePegClick();" class="large-peg"></a>
-  <a href="javascript:handlePegClick();" class="large-peg"></a>
-  <a href="javascript:handlePegClick();" class="large-peg"></a>
-  <a href="javascript:handlePegClick();" class="large-peg"></a>
+  <span><a href="javascript:handlePegClick();" class="large-peg"></a></span>
+  <span><a href="javascript:handlePegClick();" class="large-peg"></a></span>
+  <span><a href="javascript:handlePegClick();" class="large-peg"></a></span>
+  <span><a href="javascript:handlePegClick();" class="large-peg"></a></span>
   </div>
 </div>
 </body>
