--- a/mastermind.html
+++ b/mastermind.html
@@ -3,8 +3,8 @@
 <script type="text/javascript" src="mastermind.js"></script>
 <link rel="stylesheet" type="text/css" href="mastermind.css">
 </head>
-<body>
-  <div>
+<body onload="displayGame(12)">
+  <div id="peg-row-template">
   <span><a href="javascript:handlePegClick();" class="large-peg"></a></span>
   <span><a href="javascript:handlePegClick();" class="large-peg"></a></span>
   <span><a href="javascript:handlePegClick();" class="large-peg"></a></span>
