--- a/mastermind.html
+++ b/mastermind.html
@@ -5,10 +5,10 @@
 </head>
 <body onload="displayGame(12)">
   <div id="peg-row-template">
-  <span><a href="javascript:handlePegClick();" class="large-peg"></a></span>
-  <span><a href="javascript:handlePegClick();" class="large-peg"></a></span>
-  <span><a href="javascript:handlePegClick();" class="large-peg"></a></span>
-  <span><a href="javascript:handlePegClick();" class="large-peg"></a></span>
+  <span><a href="javascript:handlePegClick(0, 0);" class="large-peg"></a></span>
+  <span><a href="javascript:handlePegClick(0, 1);" class="large-peg"></a></span>
+  <span><a href="javascript:handlePegClick(0, 2);" class="large-peg"></a></span>
+  <span><a href="javascript:handlePegClick(0, 3);" class="large-peg"></a></span>
   </div>
 </div>
 </body>
