--- a/mastermind.html
+++ b/mastermind.html
@@ -4,11 +4,13 @@
 <link rel="stylesheet" type="text/css" href="mastermind.css">
 </head>
 <body onload="displayGame(12)">
-  <div id="peg-row-template">
+  <div id="game-container">
+  <div>
   <span><a href="javascript:handlePegClick(0, 0);" class="large-peg"></a></span>
   <span><a href="javascript:handlePegClick(0, 1);" class="large-peg"></a></span>
   <span><a href="javascript:handlePegClick(0, 2);" class="large-peg"></a></span>
   <span><a href="javascript:handlePegClick(0, 3);" class="large-peg"></a></span>
+  </div>
   </div>
 </div>
 </body>
