--- a/mastermind.html
+++ b/mastermind.html
@@ -6,10 +6,10 @@
 <body onload="displayGame(12)">
   <div id="game-container">
   <div>
-  <a href="javascript:handlePegClick(0, 0);" class="large-peg"></a>
-  <a href="javascript:handlePegClick(0, 1);" class="large-peg"></a>
-  <a href="javascript:handlePegClick(0, 2);" class="large-peg"></a>
-  <a href="javascript:handlePegClick(0, 3);" class="large-peg"></a>
+  <a class="large-peg"></a>
+  <a class="large-peg"></a>
+  <a class="large-peg"></a>
+  <a class="large-peg"></a>
   </div>
   </div>
 </div>
