--- a/mastermind.html
+++ b/mastermind.html
@@ -5,11 +5,14 @@
 </head>
 <body onload="displayGame(12)">
   <div id="game-container">
-  <div>
+  <div class="peg-row">
   <a class="large-peg"></a>
   <a class="large-peg"></a>
   <a class="large-peg"></a>
   <a class="large-peg"></a>
+  </div>
+  <div id="palette">
+    <a class="palette-selector"></a>
   </div>
   </div>
 </div>
