--- a/mastermind.html
+++ b/mastermind.html
@@ -4,12 +4,14 @@
 <link rel="stylesheet" type="text/css" href="mastermind.css">
 </head>
 <body onload="displayGame(12)">
+  <div>
   <div id="game-container">
   <div class="peg-row">
   <a class="large-peg"></a>
   <a class="large-peg"></a>
   <a class="large-peg"></a>
   <a class="large-peg"></a>
+  </div>
   </div>
   <div id="palette">
     <a class="palette-selector"></a>
