--- a/mastermind.html
+++ b/mastermind.html
@@ -11,6 +11,7 @@
   <a class="large-peg"></a>
   <a class="large-peg"></a>
   <a class="large-peg"></a>
+  <a class="check-button"><img src="checkmark.png"></a>
   </div>
   </div>
   <div id="palette">
