--- a/mastermind.html
+++ b/mastermind.html
@@ -8,14 +8,14 @@
   <div id="game-container">
   <div class="peg-row">
   <a class="large-peg"></a>
-  <a class="large-peg"></a>
-  <a class="large-peg"></a>
-  <a class="large-peg"></a>
   <a class="check-button"><img src="checkmark.png"></a>
   </div>
   </div>
   <div id="palette">
     <a class="palette-selector"></a>
+  </div>
+  <div id="solution">
+  <a class="large-peg"></a>
   </div>
   </div>
 </div>
