--- a/mastermind.html
+++ b/mastermind.html
@@ -8,7 +8,9 @@
   <div id="game-container">
   <div class="peg-row">
   <a class="large-peg"></a>
+  <div class="check-region">
   <a class="check-button"><img src="checkmark.png"></a>
+  </div>
   </div>
   </div>
   <div id="palette">
