--- a/mastermind.html
+++ b/mastermind.html
@@ -10,6 +10,7 @@
   <a class="large-peg"></a>
   <div class="check-region">
   <a class="check-button"><img src="checkmark.png"></a>
+  <a class="check-peg"></a>
   </div>
   </div>
   </div>
