--- a/mastermind.html
+++ b/mastermind.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="mastermind.css">
 </head>
 <body onload="displayGame();">
+  <div id="top-container">
   <div>
     <div id="game-container">
       <div class="peg-row">
@@ -23,6 +24,7 @@
   </div>
   <div id="solution">
     <a class="large-peg"></a>
+  </div>
   </div>
 </body>
 </html>
