--- a/mastermind.html
+++ b/mastermind.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Mastermind Game</title></head>
+  <title>Mastermind Game</title>
   <script type="text/javascript" src="mastermind.js"></script>
   <link rel="stylesheet" type="text/css" href="mastermind.css">
 </head>
