--- a/mastermind.html
+++ b/mastermind.html
@@ -12,7 +12,7 @@
         <a class="large-peg"></a>
         <div class="check-region">
           <a class="check-button">
-            <img src="checkmark.png">
+            <img src="Checkmark.png">
           </a>
           <a class="check-peg"></a>
         </div>
